--- a/week-06/CSS_Layout/Exercise-7/style.css
+++ b/week-06/CSS_Layout/Exercise-7/style.css
@@ -10,6 +10,12 @@ html {
     padding: 0;
 }
 
+.window{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+}
 header{
     background-color: purple;
     position: fixed;
@@ -32,4 +38,17 @@ li{
     height: 30px;
     width: 50px;
     margin-right: 12px;
+}
+
+.layout{
+    display: flex;
+    height: 100%;
+    width: 668px;
+}
+
+footer{
+    margin-top: 100px;
+    width: 100%;
+    height: 55px;
+    background-color: grey;
 }
