--- a/week-06/CSS_Layout/Exercise-7/style.css
+++ b/week-06/CSS_Layout/Exercise-7/style.css
@@ -42,13 +42,63 @@ li{
 
 .layout{
     display: flex;
+    flex-direction: column;
     height: 100%;
     width: 668px;
 }
 
+.content{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    margin-top: 83px;
+}
+
+.upper-row{
+    display: flex;
+    width: 100%;
+    height: 50%;
+    margin-bottom: 8px;
+}
+
+.bottom-row{
+    display: flex;
+    width: 100%;
+    height: 50%;
+}
+
+.green-box-big{
+    background-color: green;
+    flex-grow: 2;
+    flex-basis: 100px;
+    height: 100%;
+    margin: 0 4px;
+}
+
+.green-box-small{
+    display: flex;
+    padding: 35px 28px ;
+    background-color: green;
+    flex-grow: 1;
+    flex-basis: 100px;
+    height: 100px;
+    margin: 0 4px;
+}
+
+.red-box{
+    background-color: red;
+    flex-grow: 1;
+    flex-basis: 40%;
+}
+
 footer{
-    margin-top: 100px;
+    margin-top: 8px;
     width: 100%;
     height: 55px;
     background-color: grey;
+}
+
+p{
+    padding: 10px;
 }
