--- a/week-06/CSS_Layout/Exercise-4/1/style.css
+++ b/week-06/CSS_Layout/Exercise-4/1/style.css
@@ -12,9 +12,15 @@ html {
 
 .layout{
     padding-top: 20px;
-    margin: 0, auto;
     width: 680px;
     height: 100%;
+}
+
+.window{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .header{
