--- a/week-06/Templating/cocktails/assets/styles.css
+++ b/week-06/Templating/cocktails/assets/styles.css
@@ -1,5 +1,46 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 a {
     text-decoration: none;
     text-transform: uppercase;
     margin-right: 10px;
+}
+
+.theader {
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 20px;
+    border: 1px solid black;
+    padding: 0.5rem;
+    text-align: center;
+    border-collapse: collapse;
+}
+
+#name {
+    width: 150px;
+}
+
+#price {
+    width: 100px;
+}
+
+tbody tr:nth-child(even){
+    background-color: grey;
+}
+
+tbody tr:nth-child(odd){
+    background-color: white;
+}
+
+.names{
+    text-align: left;
+}
+
+.prices{
+    text-align: center;
 }
