--- a/week-06/Templating/cocktails/views/home.ejs
+++ b/week-06/Templating/cocktails/views/home.ejs
@@ -26,9 +26,12 @@
                 <tr>
                     <td class="names">
                         <h1 class="namesh1"><%= e.name %></h1>
+                        <% if(!e.isAlcoholic){%>
+                        <span class="nonAlcoholic">(non-alcoholic)</span>
+                        <%};%>
                         <p class="namesp"><%= e.contains.join(" ") %></p>
                     </td>
-                    <td class="prices"><%= e.price + " "%></td>
+                    <td class="prices" data-currency="Ft"><%= e.price + " "%></td>
                 </tr>
                 <% } else if(alcoholType && e.contains.includes(alcoholType)){ %>
                 <tr>
@@ -36,7 +39,7 @@
                         <h1 class="namesh1"><%= e.name %></h1>
                         <p class="namesp"><%= e.contains.join(" ") %></p>
                     </td>
-                    <td class="prices"><%= e.price + " "%></td>
+                    <td class="prices" data-currency="Ft"><%= e.price + " "%></td>
                 </tr>
              <% }}); %>
         </tbody>
