--- a/week-06/Templating/cocktails/assets/styles.css
+++ b/week-06/Templating/cocktails/assets/styles.css
@@ -3,12 +3,16 @@
     padding: 0;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
     margin-top: 20px;
+}
+
+table {
+    max-width: 500px;
 }
 
 a {
@@ -22,8 +26,8 @@ a {
 }
 
 .theader {
-    background-color: black;
-    color: white;
+    background-color: #333333;
+    color: #f2f4f7;
     text-transform: uppercase;
     font-size: 20px;
     line-height: 20px;
