dashboard and detailed view

--- a/week-06/Templating/weather/views/dashboard.ejs
+++ b/week-06/Templating/weather/views/dashboard.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather</title>
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/dashboard.css">
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
+    <h1>DASHBOARD</h1>
 </body>
 </html>
