ejs gets cityId

--- a/week-06/Templating/weather/views/detailed.ejs
+++ b/week-06/Templating/weather/views/detailed.ejs
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="/assets/detailed.css">
 </head>
 <body>
-<h1>DETAILED</h1>
+<h1>DETAILED: <%= cityId %> </h1>
 </body>
 </html>
