--- a/week-06/Templating/weather/views/dashboard.ejs
+++ b/week-06/Templating/weather/views/dashboard.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Weather</title>
     <link rel="stylesheet" href="/assets/dashboard.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 </head>
 <body>
     <h1>DASHBOARD</h1>
