--- a/week-06/Templating/weather/views/detailed.ejs
+++ b/week-06/Templating/weather/views/detailed.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Detailed</title>
     <link rel="stylesheet" href="/assets/detailed.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 </head>
 <body>
 <h1>DETAILED: <%= cityId %> </h1>
