--- a/week-06/Templating/weather/assets/dashboard.css
+++ b/week-06/Templating/weather/assets/dashboard.css
@@ -1,3 +1,64 @@
-h1 {
-    text-transform: lowercase;
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+    background-color: #EBF0F1;
+}
+
+.card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 510px;
+    height: 120px;
+    margin-bottom: 20px;
+    background-color: white;
+    padding-left: 30px;
+    border-radius: 6px;
+    color: #36475F;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.city {
+    font-size: 24px;
+}
+
+.location {
+    font-size: 16px;
+}
+
+.tempIcon {
+    display: flex;
+    align-items: center;
+    margin-right: 50px ;
+}
+
+.temp {
+    font-size: 36px;
+    margin-right: 10px;
+}
+
+.temp:after {
+    content: attr(tempScale);
+}
+
+.icon {
+    --iconSize: 90px;
+    height: var(--iconSize);
+    width: var(--iconSize);
 }
