--- a/week-06/Templating/weather/assets/dashboard.css
+++ b/week-06/Templating/weather/assets/dashboard.css
@@ -4,9 +4,6 @@ html {
 
 *, *:before, *:after {
     box-sizing: inherit;
-}
-
-* {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
@@ -38,10 +35,12 @@ body {
     color: #36475F;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: left;
+    transition: .5s ease;
 }
 
 .card:hover{
     cursor: pointer;
+    opacity: 0.8;
 }
 
 .city {
