--- a/week-06/Templating/weather/assets/detailed.css
+++ b/week-06/Templating/weather/assets/detailed.css
@@ -1,3 +1,17 @@
-h1 {
-    text-transform: lowercase;
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #EBF0F1;
 }
