--- a/week-06/Templating/weather/assets/detailed.css
+++ b/week-06/Templating/weather/assets/detailed.css
@@ -14,4 +14,67 @@ body {
     align-items: center;
     margin-top: 20px;
     background-color: #EBF0F1;
+    flex-direction: column;
+}
+
+.title {
+    margin-bottom: 20px;
+    text-align: center;
+    color: #36475F;
+}
+
+.cardContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.card {
+    display: flex;
+    border: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 170px;
+    height: 231px;
+    margin: 0 15px;
+    background-color: white;
+    border-radius: 6px;
+    color: #36475F;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: .5s ease;
+    padding: 20px 0 40px 0;
+}
+
+.icon {
+    --iconSize: 90px;
+    height: var(--iconSize);
+    width: var(--iconSize);
+}
+
+.temp {
+    font-size: 36px;
+    align-self: center;
+    margin-bottom: 30px;
+}
+
+.temp:after {
+    content: attr(tempScale);
+}
+
+.homePage {
+    text-decoration: none;
+    background-color: #387FDF;
+    color: #f2f4f7;
+    padding: 16px;
+    margin-top: 40px;
+    box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    border-radius: 4px;
+    width: 170px;
+    text-align: center;
+}
+
+.homePage:hover {
+    cursor: pointer;
+    opacity: 0.8;
 }
