--- a/week-06/photogallery/views/gallery.ejs
+++ b/week-06/photogallery/views/gallery.ejs
@@ -6,22 +6,26 @@
     <link rel="stylesheet" href="/assets/style.css"/>
 </head>
 <body>
-    <div class ="mainContent">
-        <div class="pictureContainer">
-            <button class="mainButton"></button>
-            <% photos.forEach(e => { if(e.isActive){ %>
-               <img id="activePicture" src="<%=e.path%>">
-            <div class="pictureDescription">
-                <h1 id="pictureH1"><%=e.header%></h1>
-                <p id="pictureP"><%=e.description%></p>
-            </div>
-            <% }}) %>
-            <button class="mainButton"></button>
+<div class="mainContent">
+    <div class="pictureContainer">
+        <button class="mainButton"></button>
+        <% photos.forEach(e => { if(e.isActive){ %>
+        <img id="activePicture" src="<%= e.path %>">
+        <div class="pictureDescription">
+            <h1 id="pictureH1"><%= e.header %></h1>
+            <p id="pictureP"><%= e.description %></p>
         </div>
+        <% }}) %>
+        <button class="mainButton"></button>
     </div>
-    <div class="thumbnails">
-
-    </div>
+</div>
+<div class="thumbnails">
+    <% photos.forEach(e => { if(!e.isActive){ %>
+    <button class="thumbnailButton">
+        <img class="thumbnailPicture" src="<%= e.path %>">
+    </button>
+    <% }}) %>
+</div>
 
 </body>
 </html>
