--- a/week-06/photogallery/assets/styles.css
+++ b/week-06/photogallery/assets/styles.css
@@ -1,3 +1,6 @@
+:root {
+    --button-width: 50px;
+}
 html {
     box-sizing: border-box;
     height: 100%;
@@ -7,36 +10,62 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
 }
 
 body {
+    align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
     height: inherit;
+    justify-content: space-around;
+    padding-top: 20px;
 }
 
 .mainContent {
-
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 80%;
+    position: relative;
 }
 
 .pictureContainer {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
 
 }
 
 .mainButton {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: var(--button-width);
+    background-color: rgba(0,0,0,0.6);
+    border: none;
+}
 
+#leftButton {
+    left: 0;
+}
+
+#rightButton {
+    right: 0;
 }
 
 #activePicture {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 .pictureDescription {
-
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: var(--button-width);
+    padding: 20px;
+    background-color: rgba(0,0,0,0.6);
+    color: #f2f4f7
 }
 
 #pictureH1 {
@@ -57,6 +86,10 @@ body {
 
 button:hover {
     cursor: pointer;
+}
+
+button:focus {
+    outline: none;
 }
 
 .thumbnailPicture {
