--- a/week-06/photogallery/assets/styles.css
+++ b/week-06/photogallery/assets/styles.css
@@ -1,6 +1,7 @@
 :root {
     --button-width: 50px;
 }
+
 html {
     box-sizing: border-box;
     height: 100%;
@@ -23,26 +24,24 @@ body {
 
 .mainContent {
     display: flex;
-    justify-content: center;
-    width: 80%;
     height: 80%;
+    justify-content: center;
     position: relative;
-}
-
-.pictureContainer {
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-
+    width: 80%;
 }
 
 .mainButton {
+    background-color: rgba(0, 0, 0, 0.6);
+    border: none;
+    bottom: 0;
     position: absolute;
     top: 0;
-    bottom: 0;
     width: var(--button-width);
-    background-color: rgba(0,0,0,0.6);
-    border: none;
+}
+
+.pictureContainer {
+    position: relative;
+    width: 100%;
 }
 
 #leftButton {
@@ -54,18 +53,18 @@ body {
 }
 
 #activePicture {
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 .pictureDescription {
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
     bottom: 0;
-    right: 0;
+    color: #f2f4f7;
     left: var(--button-width);
     padding: 20px;
-    background-color: rgba(0,0,0,0.6);
-    color: #f2f4f7
+    position: absolute;
+    right: 0;
 }
 
 #pictureH1 {
@@ -93,8 +92,8 @@ button:focus {
 }
 
 .thumbnailPicture {
-    width: 100px;
     height: 100px;
+    width: 100px;
 }
 
 
