--- a/week-06/photogallery/assets/styles.css
+++ b/week-06/photogallery/assets/styles.css
@@ -22,6 +22,11 @@ body {
     padding: 20px 0;
 }
 
+.title {
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
 .mainContent {
     display: flex;
     border-radius: 4px;
