--- a/week-07/XHR/giphyapi/styles.css
+++ b/week-07/XHR/giphyapi/styles.css
@@ -1,12 +1,25 @@
-body, html, .container{
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    width: 968px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.container {
+    max-width: 968px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 img {
     width: 300px;
     height: 300px;
+    overflow: hidden;
 }
