--- a/week-07/XHR/star_wars_api/assets/styles.css
+++ b/week-07/XHR/star_wars_api/assets/styles.css
@@ -1,3 +1,25 @@
-h1 {
-    text-transform: lowercase;
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.inputButton {
+    display: flex;
+}
+
+.inputLabel {
+
+}
+
+.charNameInput {
+
+}
+
+.submitButton {
+
 }
