star wars api done

--- a/week-07/XHR/star_wars_api/assets/styles.css
+++ b/week-07/XHR/star_wars_api/assets/styles.css
@@ -12,6 +12,19 @@
     display: flex;
 }
 
+.listContainer{
+    display: flex;
+}
+
+.charList{
+    margin-left: 20px;
+    list-style: none;
+}
+
+.movieList{
+    list-style: none;
+}
+
 .inputLabel {
 
 }
