posts loads, properties needs a fix

--- a/week-08/Reddit-FULL/views/posts.html
+++ b/week-08/Reddit-FULL/views/posts.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>POSTS FOR SURE</h1>
+    <div class="header"></div>
+    <div class="postsContainer"></div>
 </body>
 </html>
