--- a/week-08/Reddit-FULL/views/signIn.html
+++ b/week-08/Reddit-FULL/views/signIn.html
@@ -22,6 +22,7 @@
         </label>
         <input type="button" value="Login" id="submit">
     </form>
+    <!-- TODO: signUp link -->
 
 </body>
 
