--- a/week-08/Reddit-FULL/views/posts.html
+++ b/week-08/Reddit-FULL/views/posts.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Posts</title>
+    <link rel="stylesheet" href="../assets/css/posts.css">
     <script src="../assets/javascript/posts.js"></script>
 </head>
 <body>
-    <h1>POSTS FOR SURE</h1>
     <div class="header"></div>
     <div class="postsContainer"></div>
+    <button class="addPost">ADD POST</button>
 </body>
 </html>
