--- a/week-08/Reddit-FULL/views/posts.html
+++ b/week-08/Reddit-FULL/views/posts.html
@@ -10,5 +10,6 @@
     <div class="header"></div>
     <div class="postsContainer"></div>
     <button class="addPost">ADD POST</button>
+    <button class="logout">LOG OUT</button>
 </body>
 </html>
