--- a/week-08/Reddit-FULL/views/signIn.html
+++ b/week-08/Reddit-FULL/views/signIn.html
@@ -22,8 +22,9 @@
         </label>
         <input type="button" value="Login" id="submit">
     </form>
-    <!-- TODO: signUp link -->
-
+    <p class="signUpParagraph">Don't have an account?
+        <a href="http://localhost:3000/signup" class="signUp">SIGN UP</a>
+    </p>
 </body>
 
 </html>
