--- a/week-08/Reddit-FULL/assets/css/posts.css
+++ b/week-08/Reddit-FULL/assets/css/posts.css
@@ -1,32 +1,32 @@
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .postsContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .card {
-    background-color: #999999;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 4px;
+  background-color: #999999;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 4px;
 }
 
 .title {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .contentContainer {
-    display: flex;
+  display: flex;
 }
 
 .scoreContainer {
-    width: 100px;
+  width: 100px;
 }
 
 .description {
@@ -36,19 +36,27 @@ body {
 }
 
 .remove {
-    margin-left: 10px;
+  margin-left: 10px;
+}
+
+button {
+  padding: 8px;
+  height: 36px;
+  margin: 10px;
+  border: none;
+  border-radius: 4px;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 .addPost {
-    background-color: slateblue;
-    color: #f2f4f7;
-    padding: 8px;
-    height: 36px;
-    margin: 10px;
-    border: none;
-    border-radius: 4px;
+  background-color: slateblue;
+  color: #f2f4f7;
 }
 
-.addPost:hover {
-    cursor: pointer;
+.logout {
+    background-color: tomato;
+    color: #333333;
 }
