--- a/week-09/Closures & This/Elevator/styles.css
+++ b/week-09/Closures & This/Elevator/styles.css
@@ -1,30 +1,39 @@
 body {
-    background-color: tomato;
-    display: flex;
-    flex-direction: column;
+  background-color: tomato;
+  display: flex;
+  flex-direction: column;
 }
 
 button {
-    width: 120px;
-    height: 36px;
-    border-radius: 4px;
-    border: none;
+  width: 120px;
+  height: 36px;
+  border-radius: 4px;
+  border: none;
 }
 
 button:hover {
-    background-color: blue;
-    cursor: pointer;
+  background-color: blue;
+  cursor: pointer;
 }
 
 .elevatorContainer {
-    margin: 20px auto;
+  margin: 20px auto;
 }
 
 .floor {
-    width: 100px;
-    height: 36px;
-    background-color: #fff;
-    border: solid 2px black;
+  width: 100px;
+  height: 36px;
+  background-color: #fff;
+  border: solid 2px black;
+  color: black;
 }
 
-
+.activeFloor {
+  background-color: green;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
+}
