atleast it changes color

--- a/Quiz/Frontend/quiz/src/app/game/game.component.html
+++ b/Quiz/Frontend/quiz/src/app/game/game.component.html
@@ -1,11 +1,13 @@
-<div class="b-header">
-  <h1 class="b-header__score">SCORE: {{score}}</h1>
-</div>
+<div class="b-content">
+  <div class="b-header">
+    <h1 class="b-header__score">SCORE: {{score}}</h1>
+  </div>
 
-<div class="b-question">
-  <h2 class="b-question__title">{{question}}</h2>
-  <div class="b-question__answers">
-    <div class="b-answers__answer" *ngFor="let answer of answers">{{answer.answer}}</div>
+  <div class="b-question">
+    <h2 class="b-question__title">{{question}}</h2>
+    <div class="b-question__answers">
+      <div [ngClass]="answerClass" *ngFor="let answer of answers" (click)="checkAnswer(answer)">{{answer.answer}}</div>
+    </div>
   </div>
 
   <div class="b-footer">
