--- a/Quiz/Frontend/quiz/src/app/game/game.component.css
+++ b/Quiz/Frontend/quiz/src/app/game/game.component.css
@@ -11,3 +11,35 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
+
+.b-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.b-answers__answer {
+  padding: 16px;
+  background-color: lightblue;
+  color: #333333;
+  text-align: center;
+  margin: 8px 0;
+  border-radius: 2px;
+}
+
+.b-answer--correct {
+  background-color: green;
+}
+
+.b-answer--incorrect {
+  background-color: red;
+}
+
+.b-footer {
+  margin-top: 16px;
+}
+
+.b-footer__navigation {
+  color: blue;
+  text-decoration: none;
+}
