changes questions and handles correct and incorrect answer

--- a/Quiz/Frontend/quiz/src/app/game/game.component.html
+++ b/Quiz/Frontend/quiz/src/app/game/game.component.html
@@ -6,7 +6,8 @@
   <div class="b-question">
     <h2 class="b-question__title">{{question}}</h2>
     <div class="b-question__answers">
-      <div [ngClass]="answerClass" *ngFor="let answer of answers" (click)="checkAnswer(answer)">{{answer.answer}}</div>
+      <div [ngClass]="answerClass" *ngFor="let answer of answers"
+        (click)="checkAnswer(answer)">{{answer.answer}}</div>
     </div>
   </div>
 
