--- a/Quiz/Frontend/quiz/src/app/game/game.component.html
+++ b/Quiz/Frontend/quiz/src/app/game/game.component.html
@@ -19,7 +19,7 @@
 <ng-template #gameOver class="b-content">
   <div class="b-gameover__header">
     <h1 class="b-header__title">Congratulations, you LOST!</h1>
-    <p class="b-header__description">You got {{score}} questions right. Unfortunately you couldn't beat Jacks score, but better luck next time! </p>
+    <p class="b-header__description">You got {{score}} questions right. Unfortunately you couldn't beat Jack's score, but better luck next time! </p>
     <div class="b-header__profilPic">
       <img class="b-profilPic__picture" src="https://i.pinimg.com/originals/93/b4/21/93b4219da971cd869e8e215253f4eb39.jpg" alt="Simply Jack">
       <p class="b-profilPic__name">Jack</p>
