need more context

--- a/Angular/Basics/src/app/app.component.html
+++ b/Angular/Basics/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-search></app-search>
-<app-weathers-container></app-weathers-container>
+<app-search (searchTerm)="renderWeather($event)"></app-search>
+<app-weathers-container [weathers]="weathers"></app-weathers-container>
