--- a/Angular/Basics/src/app/components/search/search.component.html
+++ b/Angular/Basics/src/app/components/search/search.component.html
@@ -1,3 +1,7 @@
 <p>
   search works!
 </p>
+<form [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+  <input type="text" formControlName="input">
+  <button [disabled]="!searchForm.valid">SEARCH</button>
+</form>
