--- a/Angular/Doggos/src/app/dog/components/dog-picker/dog-picker.component.html
+++ b/Angular/Doggos/src/app/dog/components/dog-picker/dog-picker.component.html
@@ -1,3 +1,5 @@
-<p>
-  dog-picker works!
-</p>
+<div class="container">
+  <button class="dislike" (click)="dislike()">DISLIKE</button>
+  <img src="{{currentDogUrl?.url}}" alt="A good doggo">
+  <button class="like" (click)="like()">LIKE</button>
+</div>
