--- a/Angular/QuizGame/Frontend/src/app/components/game/question/question.component.html
+++ b/Angular/QuizGame/Frontend/src/app/components/game/question/question.component.html
@@ -1,6 +1,6 @@
-<p class="question"> {{quest?.description}} </p>
+<p class="question"> {{question?.description}} </p>
 <div class="answers">
-<button class="answer" *ngFor="let answer of quest?.answers; let i=index;" (click)="handleUserInput(answer, i)"
-  [ngClass]="{'--clicked': clickedAnswerId === i, '--wrong': !answer.is_correct && clickedAnswerId !== undefined, '--correct': answer.is_correct && clickedAnswerId !== undefined}"
-  [disabled]="clickedAnswerId !== undefined"> {{ answer?.answer }} </button>
+<button class="answer" *ngFor="let answer of question?.answers; let i=index;" (click)="handleUserInput(answer, i)"
+  [ngClass]="{'--clicked': clickedAnswerId === i, '--wrong': !answer.isCorrect && clickedAnswerId !== undefined, '--correct': answer.isCorrect && clickedAnswerId !== undefined}"
+  [disabled]="clickedAnswerId !== undefined"> {{ answer?.description }} </button>
 </div>
