--- a/Angular/QuizGame/Frontend/src/app/components/game/statistics/statistics.component.html
+++ b/Angular/QuizGame/Frontend/src/app/components/game/statistics/statistics.component.html
@@ -1,4 +1,4 @@
-<div class="container">
-  <p>Lives: {{stats.lives}}</p>
-  <p>Score: {{stats.score}}</p>
+<div class="statContainer">
+  <p class="stat">Lives: {{statistics.lives}}</p>
+  <p class="stat">Score: {{statistics.score}}</p>
 </div>
