--- a/Angular/QuizGame/Frontend/src/app/components/game/game-over/game-over.component.css
+++ b/Angular/QuizGame/Frontend/src/app/components/game/game-over/game-over.component.css
@@ -4,10 +4,16 @@
   margin: 64px auto 24px;
 }
 
-.stats {
+.statistics {
   font-size: 32px;
   text-align: center;
   margin: 16px auto;
+}
+
+.restartContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .description {
@@ -16,26 +22,20 @@
   margin: 16px auto;
 }
 
-div {
-  width: 100%;
-  text-align: center;
-}
-
-button {
+.restart {
   padding: 16px;
   background-color: blue;
   border-radius: 4px;
   color: white;
-  margin: 16px auto;
   border: none;
   cursor: pointer;
   font-size: 16px;
 }
 
-button:hover {
+.restart:hover {
   opacity: 0.8;
 }
 
-button:focus {
+.restart:focus {
   outline: none;
 }
