--- a/Angular/QuizGameDemo/Frontend/src/app/components/game/statistics/statistics.component.html
+++ b/Angular/QuizGameDemo/Frontend/src/app/components/game/statistics/statistics.component.html
@@ -1,3 +1,4 @@
-<p>
-  statistics works!
-</p>
+<div class="statContainer">
+  <p class="stat">Lives: {{ statistics.lives }}</p>
+  <p class="stat">Score: {{ statistics.score }}</p>
+</div>
