--- a/Angular/QuizGameDemo/Frontend/src/app/components/game/game-over/game-over.component.html
+++ b/Angular/QuizGameDemo/Frontend/src/app/components/game/game-over/game-over.component.html
@@ -1,3 +1,6 @@
-<p>
-  game-over works!
-</p>
+<p class="title">GAME OVER</p>
+<p class="statistics">You answered {{ numberOfCorrectAnswers }} questions correctly</p>
+<div class="restartContainer">
+  <p class="description">Do you want to try again?</p>
+  <button class="restart" (click)="restart.emit()">RESTART</button>
+</div>
