--- a/Angular/QuizGameDemo/Frontend/src/app/components/game/game.component.html
+++ b/Angular/QuizGameDemo/Frontend/src/app/components/game/game.component.html
@@ -3,5 +3,5 @@
   <app-question></app-question>
 </ng-container>
 <ng-template #gameOver>
-  <app-game-over></app-game-over>
+  <app-game-over (restart)="onRestart()"[numberOfCorrectAnswers]="gameStatistics.score"></app-game-over>
 </ng-template>
